--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
+  <head>
+    <meta charset="UTF-8" />
     <title>lesson-2</title>
-</head>
-<body>
-<script src="main.js"></script>
-</body>
+  </head>
+  <body>
+    <p id="text1">Text 1</p>
+    <p id="text2">Text 2</p>
+    <p id="text3">Text 3</p>
+    <script src="main.js"></script>
+  </body>
 </html>
