--- a/index.html
+++ b/index.html
@@ -2,9 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>lesson-2</title>
+    <title>lesson-4</title>
 </head>
 <body>
+<p id="text1">Text 1</p>
+<p id="text2">Text 2</p>
+<p id="text3">Text 3</p>
 <script src="main.js"></script>
 </body>
 </html>
